# emsuite

./: .gitignore  BLV.xyz  BLV_vdw_surface.xyz  CCO.surf  CCO2.surf  CCO_opt.xyz  CCO_opt2.xyz  LF_vdw_surface.xyz  LICENSE  README.md  TRP_vdw_surface.xyz  __init__.py  benzoquinone.xyz  benzoquinone_vdw_surface.txt  benzoquinone_vdw_surface.xyz  classTest.py  core.py  gitlog  gpu_anion.py  gpu_port.py  gpu_test.py  main-v1.py  main.py  mol_4245.xyz  mol_4245_final.xyz  mol_9087_opt.xyz  mol_9533.xyz  mol_9533_opt.xyz  next.in  old_tuning.py  pyproject.toml  qmmm_gpu.py  quicktest.py  save_chk.py  surface.etm  surface.in  td-pcm-test.py  tuning-sample.in  tuning.in  tuning.py  (+6 more)
diagnostics/: gpu_diag.py
docs/: Makefile  conf.py  index.rst  installation.rst  requirements.txt
emsuite/: __init__.py  tuning.py
emsuite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: LF.xyz  O2.xyz  asn.xyz  hydrogen.xyz  n-phe.xyz  nitrobenzene.xyz
logs_20260121_170937/: .resume_metadata.json
logs_20260126_082724/: .resume_metadata.json
method-info/: basis-sets  functionals.csv  solvents
molecules/: water.xyz
prelims/: chktest.py  core.py  gpu_anion.py  gpu_port.py  multi-gpu.py  opt-sp.py  rdx.py  tuning.py
rdx-txt/: benzoquinone.txt  hydrogen.txt  nbenz.txt  nitrobenzene.txt  water.txt
results_BLV_2026-01-21_17-00-28/: BLV_gap.mol2  BLV_gap_normalized.mol2  BLV_homo.mol2  BLV_homo_normalized.mol2  BLV_lumo.mol2  BLV_lumo_normalized.mol2  BLV_tuning_summary.csv  README.txt
results_CCO_opt2_2026-01-29_14-42-43/: CCO_opt2_gse.mol2  CCO_opt2_gse_normalized.mol2  CCO_opt2_tuning_summary.csv  README.txt
results_CCO_opt2_2026-01-29_14-45-15/: CCO_opt2_tuning_summary.csv  README.txt
results_LF_2026-01-19_22-04-46/: LF_homo.mol2  LF_homo_normalized.mol2  LF_tuning_summary.csv  README.txt
results_mol_9533_opt_2026-01-20_21-48-51/: README.txt  mol_9533_opt_cp.mol2  mol_9533_opt_cp_normalized.mol2  mol_9533_opt_dm.mol2  mol_9533_opt_dm_normalized.mol2  mol_9533_opt_ea.mol2  (+26 more)
test/: surface.etm  (+1 more)
(+432 files in other folders)
