[project]

name = "emsuite"
version = "0.1.8"
description = "Electrostatic Map Suite - A suite of calculators for quantified electrostatic interactions."
readme = "README.md"
authors = [
    { name = "Stephen O. Ajagbe", email = "ajagbetobistephen@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "geometric>=1.1",
    "pyscf>=2.10.0",
    "rdkit>=2025.3.5",
    "vdw-surfgen>=0.5.1",
]

[tool.setuptools]
packages = ["emsuite"]

[dependency-groups]
dev = [
    "twine>=6.1.0",
]
